Bug 944176: In mozilla::Scoped, don't gratuitously repeat template arguments within the class template itself. r=waldo